implemented persistence of tree evaluators in a common base class for tree evaluators.  #615 (Evaluation of HL3 function trees should be equivalent to evaluation in HL2)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1836 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ConfigurableFunctionLibraryInjector.cs" />
     <Compile Include="Constant.cs" />
     <Compile Include="AlgorithmBase.cs" />
+    <Compile Include="TreeEvaluatorBase.cs" />
     <Compile Include="HL2TreeEvaluator.cs" />
     <Compile Include="HL2TreeEvaluatorInjector.cs" />
     <Compile Include="TreeEvaluatorInjector.cs" />
