Moved simple evaluators from plugin `SVM` to plugin `Modeling`. #635
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1869 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -95,6 +95,8 @@
       <DependentUpon>ProblemInjectorView.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleMSEEvaluator.cs" />
+    <Compile Include="SimpleR2Evaluator.cs" />
     <Compile Include="TimeSeriesProblemInjector.cs" />
   </ItemGroup>
   <ItemGroup>
