changed implementation of fixed operators. (ticket #580)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1875 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.FixedOperators/3.2/HeuristicLab.FixedOperators-3.2.csproj
+++ b/sources/HeuristicLab.FixedOperators/3.2/HeuristicLab.FixedOperators-3.2.csproj
@@ -99,6 +99,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Copy of FixedOperatorBase.cs" />
+    <Compile Include="Copy of FixedSGAMain.cs" />
     <Compile Include="FixedOperatorBase.cs" />
     <Compile Include="FixedSGAMain.cs" />
     <Compile Include="HeuristicLabFixedOperatorsPlugin.cs" />
