x-axis grid can be enabled/disabled #629
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1876 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -114,7 +114,7 @@
     <Compile Include="FloatingAvgAggregator.cs" />
     <Compile Include="LabelProvider\ContinuousLabelProvider.cs" />
     <Compile Include="LabelProvider\DiscreteLabelProvider.cs" />
-    <Compile Include="Grid.cs" />
+    <Compile Include="YAxisGrid.cs" />
     <Compile Include="HorizontalLineShape.cs" />
     <Compile Include="LabelProvider\ILabelProvider.cs" />
     <Compile Include="IMouseEventListener.cs" />
@@ -163,6 +163,7 @@
     <Compile Include="Translate.cs" />
     <Compile Include="WorldShape.cs" />
     <Compile Include="XAxis.cs" />
+    <Compile Include="XAxisGrid.cs" />
     <Compile Include="YAxis.cs" />
     <Compile Include="YAxisDescriptor.cs" />
     <Compile Include="ZoomListener.cs" />
