Moved X-Axis settings from model to model.XAxis. Fixed UpdateLayout and invalidating. #498
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1880 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -114,6 +114,7 @@
     <Compile Include="FloatingAvgAggregator.cs" />
     <Compile Include="LabelProvider\ContinuousLabelProvider.cs" />
     <Compile Include="LabelProvider\DiscreteLabelProvider.cs" />
+    <Compile Include="XAxisDescriptor.cs" />
     <Compile Include="YAxisGrid.cs" />
     <Compile Include="HorizontalLineShape.cs" />
     <Compile Include="LabelProvider\ILabelProvider.cs" />
