Bug fix: No marker on first added value (#581) New feature: Tooltip, which shows the world-values on mouseover event of a datapoint. (#638) New feature: New Linetype Points, which is a line consisting only of the markers (#637)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1883 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -160,6 +160,7 @@
     <Compile Include="RectangleD.cs" />
     <Compile Include="RectangleShape.cs" />
     <Compile Include="SizeD.cs" />
+    <Compile Include="TooltipListener.cs" />
     <Compile Include="Transform.cs" />
     <Compile Include="Translate.cs" />
     <Compile Include="WorldShape.cs" />
