Added simple evaluators for mean absolute percentage error, mean absolute percentage of range error and, variance accounted for. #635 (Plugin HeuristicLab.Modeling as a common basis for all data-based modeling algorithms)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1888 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -82,11 +82,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassificationProblemInjector.cs" />
+    <Compile Include="SimpleEvaluatorBase.cs" />
     <Compile Include="ITimeSeriesAlgorithm.cs" />
     <Compile Include="IClassificationAlgorithm.cs" />
     <Compile Include="IStochasticAlgorithm.cs" />
     <Compile Include="HeuristicLabModelingPlugin.cs" />
     <Compile Include="IAlgorithm.cs" />
+    <Compile Include="SimpleMeanAbsolutePercentageErrorEvaluator.cs" />
+    <Compile Include="SimpleMeanAbsolutePercentageOfRangeErrorEvaluator.cs" />
     <Compile Include="ProblemInjector.cs" />
     <Compile Include="ProblemInjectorView.cs">
       <SubType>UserControl</SubType>
@@ -98,6 +101,7 @@
     <Compile Include="SimpleMSEEvaluator.cs" />
     <Compile Include="SimpleR2Evaluator.cs" />
     <Compile Include="TimeSeriesProblemInjector.cs" />
+    <Compile Include="SimpleVarianceAccountedForEvaluator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\HeuristicLab.Core\3.2\HeuristicLab.Core-3.2.csproj">
